[package]
name = "wk-371tti-net"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
tera = "1.14.1"
chrono = "0.4.41"
bytes = "1.10.1"
tokio = { version = "1.45.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.140"
actix-files = "0.6.6"
log = "0.4.27"
actix-cors = "0.7.1"
actix-web = { version = "4.10.1", default-features = false, features = ["compress-gzip", "macros", "cookies", "http2", "unicode"] }
