[package]
name = "wk-371tti-net"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
chrono = "0.4.41"
kurosabi = "0.3.10"
tokio = { version = "1.45.0", features = ["full"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
dashmap = "6.1.0"
rand = "0.8.0" # 0.9はだめ
base64 = "0.22.1"

